# wasm-pack-698-reproduction

./: Cargo.toml  README.md
src/: lib.rs
tests/: integration_tests.rs
