[package]
name = "wasm-pack-698-reproduction"
version = "0.1.0"
authors = ["alexlapa <lapa.alex@ex.ua>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
some_feature=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-test = "0.2"
wasm-bindgen = "0.2"